# TikBox

./: .eslintrc.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Login.tsx
src/hooks/: useCanvas.js  useDraggablePanel.ts
src/pages/: FileSelectDialog.tsx  index.tsx
src/styles/: globals.css
