[package]
name = "nebula-terminal"
version = "0.1.0"
description = "A Tauri-Based cross-platform terminal"
authors = ["you"]
license = ""
repository = ""
default-run = "nebula-terminal"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-all", "shell-execute", "shell-open", "shell-sidecar", "process-all", "os-all"] }
portable-pty = "0.9.0"
encoding_rs = "0.8.35"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.96"
sanitize-filename = "0.6.0"
url = "2.5.4"
base64 = "0.22.1"
sha2 = "0.10.8"
rand = "0.9.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
